@@ -38,7 +38,6 @@
 #pragma once
 #endif // _MSC_VER >= 1000
 
-#include "cregexp.h"
 #include "crystalparser.h"
 
 ////////////////////////////////////////////////////////////////////////////
@@ -707,8 +706,6 @@ public :
     static HINSTANCE s_hResourceInst;
 
     int m_nLastFindWhatLen;
-    RxNode *m_rxnode;
-    RxMatchRes m_rxmatch;
     LPTSTR m_pszMatched;
     static LOGFONT m_LogFont;
 
