@@ -3,6 +3,7 @@ Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
 to Subversion revision numbers (rXXXXX).
 
 WinMerge 2.9.1.4
+  Use PCRE regular expressions in the editor (#1991259)
   Update release notes (#1990886)
   Manual: Use PNG files (#1988845, #1989744)
   BugFix: Temp paths in Reports created from archive file (#1984346)
